# private-evals

./: .env  app.py  container_controller.py  evaluator.py  llm.py  pyproject.toml  readme.md  review_app.py  tasks.py
llm_tests/: print_hello_python.py  print_hello_rust.py
templates/: report_template.html  review_template.html
